tests/negative/gold/uninitialized_final_global_test.gold
tests/negative/uninitialized_final_global_test.toit:3:1: error: Global final variables can't be initialized with '?'
global ::= ?
^~~~~~
Compilation failed.
